[gd_scene load_steps=9 format=3 uid="uid://cw2mkqqqhl1ti"]

[ext_resource type="Theme" uid="uid://dttj5nnhnbe2n" path="res://assets/ui/small theme.tres" id="1_nnv48"]
[ext_resource type="Script" path="res://Menus/pause/Back to main menu.gd" id="2_6vvyh"]
[ext_resource type="AudioStream" uid="uid://ouwocqwxj6g4" path="res://assets/Not ours/sound/tap-notification-180637.mp3" id="2_hnb74"]
[ext_resource type="Script" path="res://Menus/death/Exit.gd" id="2_is73b"]
[ext_resource type="AudioStream" uid="uid://d2pgwes6f7uqu" path="res://assets/Not ours/sound/mouse-click-153941.mp3" id="3_1671d"]

[sub_resource type="Gradient" id="Gradient_01s0c"]
offsets = PackedFloat32Array(0, 0.222892, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.357143, 0.357143, 0.357143, 1, 0.784314, 0.784314, 0.784314, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5yamy"]
gradient = SubResource("Gradient_01s0c")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wkak7"]
font_size = 20
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="Death screen" type="Node2D"]
process_mode = 3
z_index = 200

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(4.656, 2.619)
texture = SubResource("GradientTexture2D_5yamy")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -36.0
offset_right = 178.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme = ExtResource("1_nnv48")
vertical = true

[node name="skill issue" type="Label" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "Get good bro"
mouse_filter = 0
text = "L + skill issue"
label_settings = SubResource("LabelSettings_wkak7")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="you died" type="Label" parent="BoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "You died..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back to main menu" type="Button" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "This takes you back to the main menu."
text = "Back to main menu
"
script = ExtResource("2_6vvyh")

[node name="Exit" type="Button" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "Wimp"
text = "Exit
"
script = ExtResource("2_is73b")

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hnb74")
volume_db = -10.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1671d")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(4, 4)

[connection signal="draw" from="BoxContainer/Back to main menu" to="BoxContainer/Back to main menu" method="_on_draw"]
[connection signal="pressed" from="BoxContainer/Back to main menu" to="BoxContainer/Back to main menu" method="_on_pressed"]
[connection signal="draw" from="BoxContainer/Exit" to="BoxContainer/Exit" method="_on_draw"]
[connection signal="pressed" from="BoxContainer/Exit" to="BoxContainer/Back to main menu" method="_on_exit_pressed"]
